# Skill_Anyone

./: .env.example  .gitignore  PLAN.md  README.md  config.yaml  pyproject.toml
skills/andrej-karpathy/: SKILL.md  knowledge.md  meta.json  style.md
skills/andrej-karpathy/transcripts/: 2oKjtvYslMY.json  EWvNQjAaOHw.json  P6sfmUTpUmc.json  VMj-3S1tku0.json  kCc8FmEb1nY.json  sM9bozW295Q.json
skills/吴恩达/: SKILL.md  knowledge.md  meta.json  style.md
skills/吴恩达/transcripts/: -_4Zi8fCZO4.json  1waHlpKiNyY.json  4Ct3Yujl1dk.json  4qJaSmvhxi8.json  5qefnAek8OA.json  6g0t3Phly2M.json  ARq74QuavAo.json  AXDByU3D1hA.json  BOCLq2gpcGU.json  C1N_PDHuJ6Q.json  D8PJAL-MZv8.json  FDCfw-YqWTE.json  JXQT_vxqwIs.json  LLux1SW--oM.json  NxTFlzBjS-4.json  NyG-7nRpsW8.json  QrzApibhohY.json  QzulmoOg2JE.json  S9ElPZupUsE.json  _e-LFe_igno.json  cSoK_6Rkbfg.json  em6dfRxYkYU.json  fODpu1-lNTw.json  k8fTYJPd3_I.json  lAq96T8FkTw.json  lWzo8CajF5s.json  nUUqwaxLnWs.json  qhXZsFVxGKo.json  s2coXdufOzE.json  tNIpEZLv_eg.json  ueO_Ph0Pyqk.json  wKkcBPp3F1Y.json  y1xoI7mBtOc.json
skills/李沐/: SKILL.md  knowledge.md  meta.json  style.md
skills/李沐/transcripts/: -PztagF3wQE.json  0Dv4s2P65YQ.json  1pvxufGRuW4.json  3eXCJd32UnM.json  5MGq7dSOghY.json  6XidEHVjS1A.json  6pzBOQAXUB8.json  7xTGNNLPyMI.json  8hS1ZtgG0wU.json  9lIkKiAn6uE.json  (+53 more)
skills/罗永浩/: SKILL.md  knowledge.md  meta.json  style.md
skills/雷军/: SKILL.md  knowledge.md  meta.json  style.md
src/youtuber2skill/: __init__.py  cli.py  config.py  pipeline.py
tests/: test_config.py  test_downloader.py  test_skillgen.py
(+22 files in other folders)
